Fix error message logic and prevent it from shifting layout

--- a/public/main.css
+++ b/public/main.css
@@ -269,6 +269,8 @@ input[type="text"]#dba::-webkit-input-placeholder {
 
 #error-msg {
     color: white;
+    position: absolute;
+    display: none;
 }
 
 .form-control-feedback {
